--- a/index.html
+++ b/index.html
@@ -141,9 +141,21 @@
             <a-entity id="eR200" gltf-model="#OMT300" scale="0.001 0.001 0.001" position="-0.19 1.0805 -0.88"
                 rotation="90 90.01 0" link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/11">
             </a-entity>
-            <a-entity id="ePMI" gltf-model="#PMI40" scale="0.001 0.001 0.001" position="0.24 1.0805 -0.95"
-                rotation="0 90 0" link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/10">
+
+            <a-entity position="0.21 1.0955 -0.910">
+                <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="0 0 0" rotation="0 90 0"
+                    link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/10">
+                </a-entity>
+                <a-entity animation="property: position; from: 0 0 0; to: 0.04 0 0;
+            dir: alternate; dur: 5300; easing: easeInOutQuad; loop:true">
+                    <a-entity gltf-model="#BT-F90" scale="1 1 1" position="-0.065 -0.015 0.023" rotation="90 0 0">
+                    </a-entity>
+                    <a-cylinder position="-0.06 -0.025 0.028" radius="0.0015" height="0.05" color="#eee"></a-cylinder>
+                    <a-cylinder position="-0.042 -0.025 0.028" radius="0.0015" height="0.05" color="#eee"></a-cylinder>
+                </a-entity>
+                <a-box position="-0.03 -0.045 0.028" scale="0.08 0.002 0.01" color="#222"></a-box>
             </a-entity>
+
             <a-entity id="eUC800" gltf-model="#UC800" scale="0.001 0.001 0.001" position="-0.21 1.0805 -0.94"
                 rotation="90 -90 0" link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/9">
             </a-entity>
@@ -247,7 +259,7 @@
             </a-entity>
         </a-entity>
 
-        <a-entity id="ePult" pult position="0.5 0 0">
+        <a-entity id="ePult2" pult position="0.5 0 0">
             <a-entity id="Base">
                 <a-box position="0 1 -1" width="0.600" depth="0.600" height="0.100" color="#425563"></a-box>
                 <a-box position="0 1.0505 -1.26" width="0.600" depth="0.080" height="0.001" color="#fff"></a-box>
@@ -357,9 +369,20 @@
             <a-entity id="eR200" gltf-model="#OMT300" scale="0.001 0.001 0.001" position="-0.19 1.0805 -0.88"
                 rotation="90 90.01 0" link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/11">
             </a-entity>
-            <a-entity id="ePMI" gltf-model="#PMI40" scale="0.001 0.001 0.001" position="0.24 1.0805 -0.95"
-                rotation="0 90 0" link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/10">
+            <a-entity position="0.21 1.0955 -0.910">
+                <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="0 0 0" rotation="0 90 0"
+                    link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/10">
+                </a-entity>
+                <a-entity animation="property: position; from: 0 0 0; to: 0.04 0 0;
+            dir: alternate; dur: 5300; easing: easeInOutQuad; loop:true">
+                    <a-entity gltf-model="#BT-F90" scale="1 1 1" position="-0.065 -0.015 0.023" rotation="90 0 0">
+                    </a-entity>
+                    <a-cylinder position="-0.06 -0.025 0.028" radius="0.0015" height="0.05" color="#eee"></a-cylinder>
+                    <a-cylinder position="-0.042 -0.025 0.028" radius="0.0015" height="0.05" color="#eee"></a-cylinder>
+                </a-entity>
+                <a-box position="-0.03 -0.045 0.028" scale="0.08 0.002 0.01" color="#222"></a-box>
             </a-entity>
+
             <a-entity id="eUC800" gltf-model="#UC800" scale="0.001 0.001 0.001" position="-0.21 1.0805 -0.94"
                 rotation="90 -90 0" link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/9">
             </a-entity>
@@ -448,14 +471,14 @@
                         height="0.015" color="#eee" material="transparent: true; opacity: 0.9">
                     </a-cylinder>
 
-                    <a-entity gltf-model="#ENA58TL" scale="0.001 0.001 0.001" position="0.065 0.00 0"
-                        rotation="90 0 0" link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/17">
+                    <a-entity gltf-model="#ENA58TL" scale="0.001 0.001 0.001" position="0.065 0.00 0" rotation="90 0 0"
+                        link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/17">
                     </a-entity>
                 </a-entity>
 
 
-                <a-entity gltf-model="#IQT1" scale="0.001 0.001 0.001" position="0.04 1.0505 -1.060"
-                    rotation="90 180 0" link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/7">
+                <a-entity gltf-model="#IQT1" scale="0.001 0.001 0.001" position="0.04 1.0505 -1.060" rotation="90 180 0"
+                    link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/7">
                 </a-entity>
                 <a-entity gltf-model="#vim" scale="0.025 0.025 0.025" position="0.04 1.281 -1.130" rotation="0 90 0"
                     link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/12">
@@ -463,7 +486,7 @@
             </a-entity>
         </a-entity>
 
-        <a-entity pult position="0.5 0 0" rotation="0 90 0">
+        <a-entity id="ePult3" pult position="0.5 0 0" rotation="0 90 0">
             <a-box position="0 1 -1" width="0.600" depth="0.600" height="0.100" color="#425563"></a-box>
             <a-box position="0 1.0505 -1.26" width="0.600" depth="0.080" height="0.001" color="#fff"></a-box>
             <a-box position="0 1.0505 -0.74" width="0.600" depth="0.080" height="0.001" color="#fff"></a-box>
@@ -571,17 +594,22 @@
                 animation="property: material.opacity;from:0;to:0.7;dur:5700;loop:true;dir: alternate;"></a-box>
             <a-cylinder position="0.075 1.1705 -0.9700" radius="0.005" height="0.3" rotation="120 0 0" color="red"
                 material="transparent: true; opacity: 0.3"></a-cylinder>
-            <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="-0.040 1.0955 -0.910" rotation="0 90 0"
-                link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/10">
-            </a-entity>
-            <a-entity animation="property: position; from: 0 0 0; to: 0.04 0 0;
-            dir: alternate; dur: 5300; easing: easeInOutQuad; loop:true">
-                <a-entity gltf-model="#BT-F90" scale="1 1 1" position="-0.105 1.0805 -0.887" rotation="90 0 0">
+
+            <a-entity position="-0.040 1.0955 -0.910">
+                <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="0 0 0" rotation="0 90 0"
+                    link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/10">
                 </a-entity>
-                <a-cylinder position="-0.10 1.0705 -0.882" radius="0.0015" height="0.05" color="#eee"></a-cylinder>
-                <a-cylinder position="-0.08 1.0705 -0.882" radius="0.0015" height="0.05" color="#eee"></a-cylinder>
+                <a-entity animation="property: position; from: 0 0 0; to: 0.04 0 0;
+            dir: alternate; dur: 5300; easing: easeInOutQuad; loop:true">
+                    <a-entity gltf-model="#BT-F90" scale="1 1 1" position="-0.065 -0.015 0.023" rotation="90 0 0">
+                    </a-entity>
+                    <a-cylinder position="-0.06 -0.025 0.028" radius="0.0015" height="0.05" color="#eee"></a-cylinder>
+                    <a-cylinder position="-0.042 -0.025 0.028" radius="0.0015" height="0.05" color="#eee"></a-cylinder>
+                </a-entity>
+                <a-box position="-0.03 -0.045 0.028" scale="0.08 0.002 0.01" color="#222"></a-box>
             </a-entity>
-            <a-box position="-0.07 1.0505 -0.882" scale="0.08 0.002 0.01" color="#222"></a-box>
+
+
             <a-entity gltf-model="#UC800" scale="0.001 0.001 0.001" position="0.200 1.0805 -0.970" rotation="90 180 0"
                 link="on:click;href:https://iolmgo.mybluemix.net/ui/#!/9">
             </a-entity>
