--- a/rfid.html
+++ b/rfid.html
@@ -69,25 +69,45 @@
 
         <a-entity id="ePult2" rotation="70 0 0" position="0.0 0 -1.75">
 
-            <a-box id="eFaixaInferior" position="0 1.0505 -0.2825" width="0.530" depth="0.050" height="0.001"
+     
+            <a-box id="eFaixaInferior2" position="0 1.0505 -0.2825" width="0.530" depth="0.050" height="0.001"
                 color="#fff"></a-box>
-            <a-box id="eFaixaCentral" position="0 1.0505 -1" width="0.530" depth="0.350" height="0.001" color="#ccc">
+            <a-box id="eFaixaCentral2" position="0 1.0505 -1" width="0.530" depth="0.350" height="0.001" color="#ccc">
             </a-box>
-            <a-image id="eLogo" src="#logo" position="0.16 1.0511 -0.85" scale="0.2 0.04 0" rotation="-90 0 0">
+            <a-image id="eLogo2" src="#logo" position="0.16 1.0511 -0.85" scale="0.2 0.04 0" rotation="-90 0 0">
             </a-image>
 
-            <a-text id="eTextoPreto" text="value: Tecnologia RFID" value="Tecnologia IO-Link" negate="true" color="#000"
-                position="-0.25 1.0511 -0.86" scale="0.10 0.10" rotation="-90 0 0"></a-text>
-            <a-text id="eTexto Verde" text="value: Indentificacao por Radio Frequencia"
+            <a-text id="eTextoPreto2" text="value: Tecnologia RFID" value="Tecnologia IO-Link" negate="true"
+                color="#000" position="-0.25 1.0511 -0.86" scale="0.10 0.10" rotation="-90 0 0"></a-text>
+            <a-text id="eTextoVerde2" text="value: Indentificacao por Radio Frequencia"
                 value="Abrindo caminho para a Industria 4.0" negate="true" color="rgb(0,165,135)"
                 position="-0.25 1.0511 -0.84" scale="0.08 0.08" rotation="-90 0 0"></a-text>
 
+                <a-text id="eTextoIOLINK2" text="value: IO-Link"  negate="true"
+                color="#000" position="-0.25 1.0511 -1.155" scale="0.10 0.10" rotation="-90 0 0"></a-text>
+                <a-text id="eTextoIDENT2" text="value: IdentControl"  negate="true"
+                color="#000" position="-0.04 1.0511 -1.155" scale="0.10 0.10" rotation="-90 0 0"></a-text>
+
+
             <!-- dispositivos -->
-            <a-entity id="eICE22" rotation="0 -90 0" position="-1.21 0 -0.71">
-                <a-entity gltf-model="#ICE2" scale="0.001 0.001 0.001" position="-0.210 1.0705 -1.100"
-                    rotation="90 90 0" color="#000"></a-entity>
-                <a-entity conectores position="-0.210 1.0805 -1.162">
+            <a-entity id="eICE22" position="-0.21 0 0.07">
+                <a-entity gltf-model="#ICE2" scale="0.001 0.001 0.001" position="0.00 1.0705 -1.120" rotation="90 90 0"
+                    color="#000"></a-entity>
+                <a-entity conectores position="0.00 1.0805 -1.182">
+
+                    <a-entity gltf-model="#V1S" position="-0.015 0 0.00" rotation="0 0 90"> </a-entity>
                     <a-entity gltf-model="#V1S" position="-0.015 0 0.022" rotation="0 0 90"> </a-entity>
+                    <a-entity gltf-model="#V1S" position="-0.015 0 0.044" rotation="0 0 90"> </a-entity>
+                    <a-entity gltf-model="#V1S" position="-0.015 0 0.17" rotation="0 0 90"> </a-entity>
+                    <a-entity position="0 0 0.022" rotation="0 180 0">
+                        <a-entity position="0.03 0.045 0.022"
+                            geometry="primitive: torus; radius: 0.015; radiusTubular: 0.002; arc: 180; "
+                            material="color:grey"> </a-entity>
+                        <a-cylinder position="0.045 0.005 0.022" radius="0.004" height="0.08" rotation="0 0 0"
+                            color="grey">
+                        </a-cylinder>
+                    </a-entity>
+
                     <a-entity position="0 0 0.044" rotation="0 180 0">
                         <a-entity position="0.03 0.045 0.022"
                             geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
@@ -96,16 +116,36 @@
                             color="grey">
                         </a-cylinder>
                     </a-entity>
+                    <a-entity position="0 0 0.066" rotation="0 180 0">
+                        <a-entity position="0.03 0.045 0.022"
+                            geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                            material="color:grey"> </a-entity>
+                        <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0"
+                            color="grey">
+                        </a-cylinder>
+                    </a-entity>
+                    <a-entity position="0 0 0.195" rotation="0 180 0">
+                        <a-entity position="0.03 0.045 0.022"
+                            geometry="primitive: torus; radius: 0.015; radiusTubular: 0.002; arc: 180; "
+                            material="color:rgb(0,125,95)"> </a-entity>
+                        <a-cylinder position="0.045 0.005 0.022" radius="0.004" height="0.08" rotation="0 0 0"
+                            color="rgb(0,125,95)">
+                        </a-cylinder>
+                    </a-entity>
                 </a-entity>
             </a-entity>
-            <a-entity id="eFP2" gltf-model="#IQT1" scale="0.001 0.001 0.001" position="-0.17506 1.0505 -1.1"
+            <a-entity id="eFP2" gltf-model="#IQT1" scale="0.001 0.001 0.001" position="-0.10506 1.0505 -0.98"
                 rotation="90 180 0"> </a-entity>
-            <a-entity id="eF1902" gltf-model="#F190" scale="0.001 0.001 0.001" position="0.16 1.0555 -1.09"
-                rotation="90 180 0" color="#000"></a-entity>
-            <a-entity id="eKP22" gltf-model="#KP2" scale="0.001 0.001 0.001" position="0.12 1.0505 -0.92"
-                rotation="90 90 0" color="#000"></a-entity>
-            <a-entity id="eF152" gltf-model="#F15" scale="0.001 0.001 0.001" position="-0.01 1.0605 -1.1"
-                rotation="180 90 0" color="#000"></a-entity>
+
+            <a-entity id="eF612" gltf-model="#F61" scale="0.001 0.001 0.001" position="-0.10506 1.061 -1.09"
+                rotation="-90 180 0"> </a-entity>
+
+            <a-entity id="eKP22" gltf-model="#KP2" scale="0.001 0.001 0.001" position="0 1.0505 -1.05"
+                rotation="90 180 0"></a-entity>
+            <a-entity id="eF1902" gltf-model="#F190" scale="0.001 0.001 0.001" position="0.17 1.0555 -1.1"
+                rotation="90 90 0"></a-entity>
+            <a-entity id="eF152" gltf-model="#F15" scale="0.001 0.001 0.001" position="0.18 1.0605 -0.95"
+                rotation="180 0 0"></a-entity>
 
 
 
